// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replaces ingredients 1`] = `
{
  "key": {
    "#": {
      "item": "minecraft:cobblestone",
    },
    "R": {
      "item": "minecraft:emerald",
    },
    "T": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:iron_ingot",
    },
  },
  "pattern": [
    "TTT",
    "#X#",
    "#R#",
  ],
  "result": {
    "item": "minecraft:piston",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replaces ingredients 2`] = `
{
  "key": {
    "#": {
      "item": "minecraft:iron_ingot",
    },
    "X": {
      "item": "minecraft:emerald",
    },
  },
  "pattern": [
    " # ",
    "#X#",
    " # ",
  ],
  "result": {
    "item": "minecraft:compass",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replaces ingredients in create recipes 1`] = `
{
  "key": {
    "C": {
      "tag": "#forge:raw_materials/iron",
    },
  },
  "pattern": [
    "CCC",
    "CCC",
    "CCC",
  ],
  "result": {
    "item": "create:raw_zinc_block",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replaces ingredients in create recipes 2`] = `
{
  "ingredients": [
    {
      "tag": "#forge:raw_materials/iron",
    },
  ],
  "processingTime": 400,
  "results": [
    {
      "item": "create:crushed_raw_zinc",
    },
    {
      "chance": 0.75,
      "item": "create:experience_nugget",
    },
  ],
  "type": "create:crushing",
}
`;

exports[`replaces ingredients in create recipes 3`] = `
{
  "cookingtime": 100,
  "experience": 0.7,
  "ingredient": {
    "tag": "#forge:raw_materials/iron",
  },
  "result": "create:zinc_ingot",
  "type": "minecraft:blasting",
}
`;

exports[`replaces ingredients in create recipes 4`] = `
{
  "cookingtime": 200,
  "experience": 0.7,
  "ingredient": {
    "tag": "#forge:raw_materials/iron",
  },
  "result": "create:zinc_ingot",
  "type": "minecraft:smelting",
}
`;

exports[`replaces ingredients with additional input filter 1`] = `
{
  "key": {
    "#": {
      "item": "minecraft:cobblestone",
    },
    "R": {
      "item": "minecraft:emerald",
    },
    "T": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:iron_ingot",
    },
  },
  "pattern": [
    "TTT",
    "#X#",
    "#R#",
  ],
  "result": {
    "item": "minecraft:piston",
  },
  "type": "minecraft:crafting_shaped",
}
`;

exports[`replaces ingredients with additional input filter 2`] = `
{
  "key": {
    "#": {
      "tag": "minecraft:planks",
    },
    "X": {
      "item": "minecraft:emerald",
    },
  },
  "pattern": [
    "###",
    "#X#",
    "###",
  ],
  "result": {
    "item": "minecraft:note_block",
  },
  "type": "minecraft:crafting_shaped",
}
`;
